zirconsys_homepage/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: homepage
    namespace: homepage
    labels:
        app.kubernetes.io/name: homepage
    annotations: {}
spec:
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: http
          protocol: TCP
          name: http
    selector:
        app.kubernetes.io/name: homepage
