zirconsys_homepage/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: homepage
    namespace: homepage
    labels:
        app.kubernetes.io/name: homepage
    annotations:
        gethomepage.dev/description: Dynamically Detected Homepage
        gethomepage.dev/enabled: "true"
        gethomepage.dev/group: Cluster Management
        gethomepage.dev/icon: homepage.png
        gethomepage.dev/name: Homepage
spec:
    ingressClassName: zirconsys-ingress
    rules:
        - host: "dash.zircon.local"
          http:
              paths:
                  - path: "/"
                    pathType: Prefix
                    backend:
                        service:
                            name: homepage
                            port:
                                number: 3000
